--- a/sample.html
+++ b/sample.html
@@ -26,7 +26,7 @@
     <div id="baz">baz div</div>
 
     <script src="source/jquery-3.5.1.min.js"></script>
-    <script src="src/jQuery.hashToggle-1.0.min.js"></script>
+    <script src="src/jQuery.hashToggle-1.0.js"></script>
     <script src="sample.js"></script>
 </body>
 </html>
