--- a/sample.html
+++ b/sample.html
@@ -25,7 +25,7 @@
     <div id="bar">bar div</div>
     <div id="baz">baz div</div>
 
-    <script src="source/jquery-3.5.1.min.js"></script>
+    <script src="vendor/jquery-3.5.1.min.js"></script>
     <script src="src/jQuery.hashToggle-1.0.js"></script>
     <script src="sample.js"></script>
 </body>
