내용 수정 및 추가

--- a/sample.html
+++ b/sample.html
@@ -17,9 +17,9 @@
 </head>
 <body>
 
-    <a href="#foo">foo</a>
-    <a href="#bar">bar</a>
-    <a href="#baz">baz</a>
+    <a href="#foo">foo anchor</a>
+    <a href="#bar">bar anchor</a>
+    <a href="#baz">baz anchor</a>
 
     <div id="foo">foo div</div>
     <div id="bar">bar div</div>
